// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookingBreakdown customer transaction data matches snapshot 1`] = `
<div
  className=""
>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.pricePerNight
      </span>
    </span>
    <span
      className={undefined}
    >
      10
    </span>
  </div>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.bookingPeriod
      </span>
    </span>
    <span
      className={undefined}
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "BookingBreakdown.nightCount",
          }
        }
      />
    </span>
  </div>
  <hr
    className={undefined}
  />
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <span>
        BookingBreakdown.total
      </span>
    </div>
    <div
      className={undefined}
    >
      20
    </div>
  </div>
</div>
`;

exports[`BookingBreakdown pretransaction data matches snapshot 1`] = `
<div
  className=""
>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.pricePerNight
      </span>
    </span>
    <span
      className={undefined}
    >
      10
    </span>
  </div>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.bookingPeriod
      </span>
    </span>
    <span
      className={undefined}
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "BookingBreakdown.nightCount",
          }
        }
      />
    </span>
  </div>
  <hr
    className={undefined}
  />
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <span>
        BookingBreakdown.total
      </span>
    </div>
    <div
      className={undefined}
    >
      20
    </div>
  </div>
</div>
`;

exports[`BookingBreakdown provider canceled transaction data matches snapshot 1`] = `
<div
  className=""
>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.pricePerNight
      </span>
    </span>
    <span
      className={undefined}
    >
      10
    </span>
  </div>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.bookingPeriod
      </span>
    </span>
    <span
      className={undefined}
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "BookingBreakdown.nightCount",
          }
        }
      />
    </span>
  </div>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.subTotal
      </span>
    </span>
    <span
      className={undefined}
    >
      20
    </span>
  </div>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.refund
      </span>
    </span>
    <span
      className={undefined}
    >
      -20
    </span>
  </div>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.commission
      </span>
    </span>
    <span
      className={undefined}
    >
      -2
    </span>
  </div>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.refundProviderFee
      </span>
    </span>
    <span
      className={undefined}
    >
      2
    </span>
  </div>
  <hr
    className={undefined}
  />
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <span>
        BookingBreakdown.providerTotalCanceled
      </span>
    </div>
    <div
      className={undefined}
    >
      0
    </div>
  </div>
  <span
    className={undefined}
  >
    <span>
      BookingBreakdown.commissionFeeNote
    </span>
  </span>
</div>
`;

exports[`BookingBreakdown provider transaction data matches snapshot 1`] = `
<div
  className=""
>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.pricePerNight
      </span>
    </span>
    <span
      className={undefined}
    >
      10
    </span>
  </div>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.bookingPeriod
      </span>
    </span>
    <span
      className={undefined}
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "BookingBreakdown.nightCount",
          }
        }
      />
    </span>
  </div>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.subTotal
      </span>
    </span>
    <span
      className={undefined}
    >
      20
    </span>
  </div>
  <div
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span>
        BookingBreakdown.commission
      </span>
    </span>
    <span
      className={undefined}
    >
      -2
    </span>
  </div>
  <hr
    className={undefined}
  />
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <span>
        BookingBreakdown.providerTotalDefault
      </span>
    </div>
    <div
      className={undefined}
    >
      18
    </div>
  </div>
  <span
    className={undefined}
  >
    <span>
      BookingBreakdown.commissionFeeNote
    </span>
  </span>
</div>
`;
